# arhelk-russian

./: .gitignore  .travis.yml  README.md  arhelk-russian.cabal  stack.yaml
config/: particles.txt
src/Arhelk/Russian/: Lemma.hs  Rule.hs
src/Arhelk/Russian/Lemma/: Adjective.hs  Adverb.hs  Common.hs  Data.hs  Particle.hs  Substantive.hs  Verb.hs
src/Arhelk/Russian/Lemma/Data/: Adjective.hs  Adverb.hs  Common.hs  Particle.hs  Substantive.hs  Verb.hs
test/: Spec.hs
test/Arhelk/Russian/: Lemma.hs
test/Test/Arhelk/Russian/: Lemma.hs
