name:                arhelk-russian
version:             0.1.0.0
synopsis:            Plugin for Arhelk system for Russian language.
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/arhelk-russian
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha <ncrashed@gmail.com>, Oganyan Levon <lemarwin42@gmail.com>
maintainer:          ncrashed@gmail.com
copyright:           2015 © Teaspot Studio
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                      Arhelk.Russian.Lemma
                      Arhelk.Russian.Lemma.Adjective
                      Arhelk.Russian.Lemma.Adverb
                      Arhelk.Russian.Lemma.Common
                      Arhelk.Russian.Lemma.Particle
                      Arhelk.Russian.Lemma.Data
                      Arhelk.Russian.Lemma.Data.Adjective
                      Arhelk.Russian.Lemma.Data.Adverb
                      Arhelk.Russian.Lemma.Data.Common
                      Arhelk.Russian.Lemma.Data.Particle
                      Arhelk.Russian.Lemma.Data.Substantive
                      Arhelk.Russian.Lemma.Data.Verb
                      Arhelk.Russian.Lemma.Substantive
                      Arhelk.Russian.Lemma.Verb

  build-depends:       base >= 4.7 && < 5
                     , arhelk-core
                     , lens-simple
                     , mtl
                     , text
                     , text-show

  default-language:    Haskell2010
  default-extensions:  
                       DeriveFunctor
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RankNTypes
                       TemplateHaskell
                       ScopedTypeVariables
                       RecordWildCards

test-suite arhelk-russian-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arhelk-core
                     , arhelk-russian
                     , HUnit
                     , QuickCheck
                     , quickcheck-instances
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text
                     , text-show
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-modules:       Test.Arhelk.Russian.Lemma

source-repository head
  type:     git
  location: https://github.com/Teaspot-Studio/arhelk-russian.git